fix that test // better logging on fail